Реализовано: Feature: Create game place. Scenario: Create game place 3 x 3, Create game place 4 x 4, Create an empty game place Добавлен параметр: gamePlace. Добавлены методы-заглушки: CreateGamePlace, ClearGamePlace, GetSizeGamePlace, SetCellValue, GetCellValue. Добавлены методы: SetGamePlace, SetPlayers, GetGamePlace, GetPlayers. Сценарии не проходят: Create game place 3 x 3, Create game place 4 x 4, Create an empty game place. Сценарии проходят: все остальные.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -55,7 +55,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Features\Creater game place.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Creater game place.feature</DependentUpon>
+    </Compile>
     <Compile Include="Features\Steps\AddingPlayersSteps.cs" />
+    <Compile Include="Features\Steps\CreateGamePlaceSteps.cs" />
     <Compile Include="GameEnigne.cs" />
     <Compile Include="Features\Adding players.feature.cs">
       <AutoGen>True</AutoGen>
@@ -69,6 +75,10 @@
     <None Include="Features\Adding players.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Adding players.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\Creater game place.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Creater game place.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
