Реализовано: Feature: Set cell value on game place. Scenario: Set cell x = 1 y = 2 value "x", Set cell x = 2 y = 0 value "y". Сценарии проходят: все.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -60,8 +60,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Creater game place.feature</DependentUpon>
     </Compile>
+    <Compile Include="Features\Set cell value on game place.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Set cell value on game place.feature</DependentUpon>
+    </Compile>
     <Compile Include="Features\Steps\AddingPlayersSteps.cs" />
     <Compile Include="Features\Steps\CreateGamePlaceSteps.cs" />
+    <Compile Include="Features\Steps\SetCellValueOnGamePlaceSteps.cs" />
     <Compile Include="GameEnigne.cs" />
     <Compile Include="Features\Adding players.feature.cs">
       <AutoGen>True</AutoGen>
@@ -79,6 +85,10 @@
     <None Include="Features\Creater game place.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Creater game place.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\Set cell value on game place.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Set cell value on game place.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
